syntax = "proto3";

package async_service;
option go_package = "github.com/byebyebruce/natsrpc/example/pb/async_service;async_service";

import "natsrpc.proto";
import "testdata.proto";


service Greeter {
  option (natsrpc.serviceAsync) = true; // async reply

  rpc Hello (testdata.HelloRequest) returns (testdata.HelloReply) {}
  rpc HelloToAll (testdata.HelloRequest) returns (testdata.Empty) {
    option (natsrpc.publish) = true;
  }
}
